<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="284dp"
    android:layout_height="172dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_rv_round">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_leave_title"
        android:textColor="@color/black"
        android:textAppearance="@font/font_pretendard_semibold"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete_text"
        android:textColor="@color/gray3"
        android:textAppearance="@font/font_pretendard_regular"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancle"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:background="@drawable/dialog_btn_round"
        android:backgroundTint="@color/gray6"
        android:text="@string/cancle"
        android:textColor="@color/gray3"
        android:textAppearance="@font/font_pretendard_semibold"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:background="@drawable/dialog_btn_round"
        android:backgroundTint="@color/systemred"
        android:text="@string/leave"
        android:textColor="@color/white"
        android:textAppearance="@font/font_pretendard_semibold"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_text"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>