<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.recordingdetail.RecordingDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/white"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="7dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_back"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="@+id/toolbar" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textAppearance="@font/font_pretendard_regular"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"/>

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/delete"
                android:textColor="@color/systemred"
                android:textAppearance="@font/font_pretendard_regular"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_save"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="24dp"
                android:text="@string/date"
                android:textAppearance="@font/font_pretendard_regular"
                android:textSize="12sp"
                android:textColor="@color/gray3"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"/>

            <EditText
                android:id="@+id/et_title_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="40dp"
                android:padding="0dp"
                android:text="@string/title_keyword"
                android:textAppearance="@font/font_pretendard_semibold"
                android:textSize="24dp"
                android:textStyle="bold"
                android:lineSpacingExtra="2dp"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit"/>

            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:padding="0dp"
                android:src="@drawable/ic_edit"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"/>

            <TextView
                android:id="@+id/tv_memo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginHorizontal="12dp"
                android:paddingStart="20dp"
                android:paddingVertical="13dp"
                android:text="@string/memo_title"
                android:textAppearance="@font/font_pretendard_semibold"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/main_rv_round"
                android:backgroundTint="@color/gray6"
                app:layout_constraintTop_toBottomOf="@+id/et_title_keyword"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout">
            </TextView>

            <EditText
                android:id="@+id/et_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="-16dp"
                android:paddingTop="16dp"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp"
                android:text="@string/memo"
                android:textAppearance="@font/font_pretendard_regular"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp"
                android:textColor="@color/gray2"
                android:background="@drawable/main_rv_half"
                android:backgroundTint="@color/gray6"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/tv_memo_title"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"/>


            <CheckBox
                android:id="@+id/check_pinning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/pinning"
                android:textAppearance="@font/font_pretendard_regular"
                android:textSize="14sp"
                android:textColor="@color/gray4"
                android:button="@android:color/transparent"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/selector_pinning"
                android:drawablePadding="6dp"
                app:layout_constraintTop_toTopOf="@+id/tv_memo_title"
                app:layout_constraintEnd_toEndOf="@id/tv_memo_title"/>

            <TextView
                android:id="@+id/tv_ai_summarize_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginStart="20dp"
                android:text="@string/ai_summarize_title"
                android:textAppearance="@font/font_pretendard_bold"
                android:textSize="12sp"
                android:textColor="@color/gray2"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/et_memo"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"/>

            <TextView
                android:id="@+id/tv_ai_summarize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/ai_summarize"
                android:textAppearance="@font/font_pretendard_regular"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp"
                android:textColor="@color/gray2"
                app:layout_constraintTop_toBottomOf="@+id/tv_ai_summarize_title"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"/>

            <TextView
                android:id="@+id/tv_recording_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginStart="20dp"
                android:text="@string/recording_content_title"
                android:textAppearance="@font/font_pretendard_bold"
                android:textSize="12sp"
                android:textColor="@color/gray2"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_ai_summarize"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"/>

            <TextView
                android:id="@+id/tv_recording_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="20dp"
                android:paddingBottom="200dp"
                android:text="@string/recording_content"
                android:textAppearance="@font/font_pretendard_regular"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp"
                android:textColor="@color/gray2"
                app:layout_constraintTop_toBottomOf="@+id/tv_recording_content_title"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-7dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="false"
        android:progress="50"
        android:progressBackgroundTint="@color/gray6"
        android:progressTint="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_appbar"/>

    <View
        android:id="@+id/bottom_appbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/scrollView_memo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginStart="10dp"
        android:text="@string/start_time"
        android:textAppearance="@font/font_pretendard_regular"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/bottom_appbar"
        app:layout_constraintStart_toStartOf="@+id/bottom_appbar"/>

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:text="@string/end_time"
        android:textAppearance="@font/font_pretendard_regular"
        android:textSize="12sp"
        android:textColor="@color/gray3"
        app:layout_constraintTop_toTopOf="@+id/bottom_appbar"
        app:layout_constraintEnd_toEndOf="@+id/bottom_appbar"/>

    <ImageButton
        android:id="@+id/btn_timeago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginStart="91dp"
        android:src="@drawable/ic_timeago"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@+id/bottom_appbar"
        app:layout_constraintStart_toStartOf="@+id/bottom_appbar"/>

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:src="@drawable/ic_play"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@+id/bottom_appbar"
        app:layout_constraintStart_toStartOf="@+id/bottom_appbar"
        app:layout_constraintEnd_toEndOf="@+id/bottom_appbar"/>

    <ImageButton
        android:id="@+id/btn_timelater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="91dp"
        android:src="@drawable/ic_timelater"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@+id/bottom_appbar"
        app:layout_constraintEnd_toEndOf="@+id/bottom_appbar"/>

    <ScrollView
        android:id="@+id/scrollView_memo"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_bottom_memo"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:paddingVertical="7dp"
            android:paddingHorizontal="20dp"
            android:text="@string/memo"
            android:textAppearance="@font/font_pretendard_regular"
            android:textSize="14sp"
            android:lineSpacingExtra="6dp"
            android:background="@color/gray6" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>