<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/fragment_container"
    tools:context=".presenter.recording.RecordingFragment">

    <ImageButton
        android:id="@+id/ib_recording_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/recording_arrow"
        android:background="@android:color/transparent"
        android:paddingTop="2dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_delete"
        tools:ignore="SpeakableTextPresentCheck"/>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/systemred"
        android:textAppearance="@font/font_pretendard_regular"
        android:textSize="14sp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ib_recording_arrow"/>

    <TextView
        android:id="@+id/tv_recording_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_time"
        android:textSize="24sp"
        android:textAppearance="@font/font_pretendard_regular"
        android:textColor="@color/black"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textAppearance="@font/font_pretendard_regular"
        android:textSize="14sp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view_recording"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_recording_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/recording_start"
        app:layout_constraintTop_toBottomOf="@+id/view_recording"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recording_background_round"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_recording"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/selector_rb_recording"
        app:tabTextColor="@color/gray3"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/tabTextStyle"
        app:tabSelectedTextAppearance="@style/tabTextStyle"
        app:tabIndicatorColor="@color/gray3"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:layout_constraintTop_toTopOf="@+id/view_background"
        app:layout_constraintStart_toStartOf="@+id/view_background"
        app:layout_constraintEnd_toEndOf="@+id/view_background"
        android:textAllCaps="false"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintStart_toStartOf="@+id/view_background"
        app:layout_constraintEnd_toEndOf="@+id/view_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>